# image-slicer

./: .gitignore  LICENSE  Makefile  build_exe.bat  pyproject.toml  setup.cfg
image_slicer/: __main__.py
tests/: test_slicer.py
